Fixed alignment issues

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -83,7 +83,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  justify-content: center;
   text-decoration: none;
   transition: 0.2s;
 
